<resources>
    <string name="app_name">Geaux Parking</string>
    <string name="save_location_text">Save</string>
    <string name="zone1">Commuter</string>
    <string name="zone2">Greek</string>
    <string name="zone3">Resident</string>
    <string name="zone4">Law</string>
    <string name="visitorParking">Visitor Parking</string>
    <string name="allZoneParking">All Zones</string>
    <string name="current_location">Current Location</string>
    <string name="removeLotPins">Remove Lot Pins</string>
    <string name="removeParkingPin">Remove Parking Pin</string>
</resources>