<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/zone1"
        android:title="@string/zone1" />
    <item
        android:id="@+id/zone2"
        android:title="@string/zone2" />
    <item
        android:id="@+id/zone3"
        android:title="@string/zone3" />
    <item
        android:id="@+id/zone4"
        android:title="@string/zone4" />
    <item
        android:id="@+id/visitorParking"
        android:title="@string/visitorParking" />
    <item
        android:id="@+id/allZoneParking"
        android:title="@string/allZoneParking" />
    <item
        android:id="@+id/removeLotPins"
        android:title="@string/removeLotPins" />
    <item
        android:id="@+id/removeParkingPin"
        android:title="@string/removeParkingPin" />
</menu>